Update Google Apps Script Web App URL placeholder

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             </div>
             <div class="form-group">
                 <label>Google Apps Script Web App URL</label>
-                <input type="url" id="script-url-input" placeholder="https://script.google.com/macros/s/.../exec">
+                <input type="url" id="script-url-input" placeholder="https://script.google.com/macros/s/AKfycbzvxVwHLIQDowB2ZINS-ITmusKNCZEPYpBTTyOXE7Tte3caE-q-EuglOu_oFHZKgzib/exec">
             </div>
             <button class="btn btn-primary" onclick="saveSettings()">儲存設定</button>
         </div>
